src/main/default/objects/DHM_Settings__c/DHM_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Data Health Management Settings</description>
    <label>Data Health Management Settings</label>
</CustomObject>