src/main/default/objects/DHM_Settings__c/fields/Batch_Contact_Merging__c.field-meta.xml
<CustomField>
    <fullName>Batch_Contact_Merging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Batch Contact merging for faster merging of contact records.  Uncheck this option if contacts are not merging or errors in the contact merging process.</description>
    <inlineHelpText>Batch Contact merging for faster merging of contact records.  Uncheck this option if contacts are not merging or errors in the contact merging process.</inlineHelpText>
    <label>Batch Contact Merging</label>
    <type>Checkbox</type>
</CustomField>