src/main/default/objects/DHM_Settings__c/fields/Disable_All_Services__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable All Services when checked will disable discovery and merging.  Typically only used for debugging deployments.</description>
    <inlineHelpText>Disable All Services when checked will disable discovery and merging.  Typically only used for debugging deployments.</inlineHelpText>
    <label>Disable All Services</label>
    <type>Checkbox</type>
</CustomField>