src/main/default/objects/DHM_Settings__c/fields/Enable_Debug_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Debug Logging to write debug level messages to the log table</description>
    <inlineHelpText>Enable Debug Logging to write debug level messages to the log table</inlineHelpText>
    <label>Enable Debug Logging</label>
    <type>Checkbox</type>
</CustomField>