src/main/default/objects/DHM_Settings__c/fields/Enable_Error_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Error_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Error Logging to write error level messages to the log table</description>
    <inlineHelpText>Enable Error Logging to write error level messages to the log table</inlineHelpText>
    <label>Enable Error Logging</label>
    <type>Checkbox</type>
</CustomField>