src/main/default/objects/DHM_Settings__c/fields/Log_Filter__c.field-meta.xml
<CustomField>
    <fullName>Log_Filter__c</fullName>
    <description>Enter text to filter which log messages are written to the database.  Supports single value or comma-separated values.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter text to filter which log messages are written to the database.  Supports single value or comma-separated values.</inlineHelpText>
    <label>Log Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>