src/main/default/objects/DHM_Settings__c/fields/Maximum_Discover_Having_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discover_Having_Count__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum value to use in a having count to find duplicates.</description>
    <inlineHelpText>Maximum value to use in a having count to find duplicates.</inlineHelpText>
    <label>Maximum Discover Having Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>