src/main/default/objects/DHM_Settings__c/fields/Maximum_Records_Display__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Records_Display__c</fullName>
    <defaultValue>250</defaultValue>
    <description>Maximum number of records to display on the merge candidates pages</description>
    <inlineHelpText>Maximum number of records to display on the merge candidates pages</inlineHelpText>
    <label>Maximum Records Display</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>