src/main/default/objects/DHM_Settings__c/fields/Maximum_Salesforce_Limits_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Salesforce_Limits_to_Use__c</fullName>
    <defaultValue>65</defaultValue>
    <description>Maximum percentage of Salesforce Limits (e.g., SOQL Queries, CPU Time) to use for a given execution cycle.</description>
    <inlineHelpText>Maximum percentage of Salesforce Limits (e.g., SOQL Queries, CPU Time) to use for a given execution cycle.</inlineHelpText>
    <label>Maximum % Salesforce Limits to Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>