src/main/default/objects/DHM_Settings__c/fields/Merge_History_Write_All__c.field-meta.xml
<CustomField>
    <fullName>Merge_History_Write_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true write all merge fields into merge history otherwise write only fields ignored on the duplicate record.</description>
    <inlineHelpText>When true write all merge fields into merge history otherwise write only fields ignored on the duplicate record.</inlineHelpText>
    <label>Merge History Write All</label>
    <type>Checkbox</type>
</CustomField>